--- a/assignment/style.css
+++ b/assignment/style.css
@@ -11,10 +11,13 @@
     border: 1px solid black;
 }
 
-.image {
-    position: relative;
+.img {
+    padding: 0px;
+    border: 5px solid rgb(14, 143, 143);
+}
+
+.space {
     padding: 10px;
-    border: 2px;
 }
 
 .center-text {
@@ -24,11 +27,13 @@
 .subheader-text {
     font-family: Arial, Helvetica, sans-serif;
     font-style: bold;
+    padding-left: 12px;
 }
 
 .body-text {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: medium;
+    padding-left: 10px;
 }
 
 .quote-text {
